commit translated contents

--- a/mixed-reality-docs/cvpr-2019.md
+++ b/mixed-reality-docs/cvpr-2019.md
@@ -6,15 +6,15 @@ ms.author: febogo
 ms.date: 1/9/2019
 ms.topic: article
 keywords: 이벤트, 연구 모드, cvpr, 컴퓨터 비전, 연구, HoloLens,
-ms.openlocfilehash: 138dda1e606ac1e34aa7237bd26bbb702befb71c
-ms.sourcegitcommit: 384b0087899cd835a3a965f75c6f6c607c9edd1b
+ms.openlocfilehash: 1e53520979f5ca6692b9af69fb8c899cb34e9321
+ms.sourcegitcommit: a4a53e6772805d89a47588857e3e8fb1fd8d9710
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 04/12/2019
-ms.locfileid: "59598895"
+ms.lasthandoff: 05/09/2019
+ms.locfileid: "65469084"
 ---
 # <a name="computer-vision-applications-for-mixed-reality-headsets"></a>혼합된 현실 헤드셋에 대 한 컴퓨터 비전 응용 프로그램
-장기 Beach (CA)-2019 년 6 월 17 일
+장기 Beach (CA)-2019 년 6 월 17 년 (오후)
 
 와 함께에서 구성 [CVPR 2019](http://cvpr2019.thecvf.com/)
 
@@ -35,8 +35,8 @@ Microsoft HoloLens 같은 혼합된 현실 헤드셋은 컴퓨터 비전 응용 
 (Ego 중심) 개체 인식, 직접 및 사용자 추적, 활동 인식을, SLAM, 3D 재구성, 장면 이해, 센서 기반 지역화, 탐색 등의 항목에서 전송을 사용 하는 것이 좋습니다.
 
 ## <a name="paper-submission"></a>문서 제출
-* 문서 제출 마감 날짜: 1 월
-* 작성자가 알림: 5 월 15 일
+* 문서 제출 마감 날짜: 월 17 일
+* 작성자가 알림: 5 월 24
 
 문서 제출 CVPR 템플릿이 사용할지 및 4 페이지 및 참조로 제한 됩니다. 또한 작성자를 응용 프로그램을 보여 주는 비디오를 제출 하려면을 사용 하는 것이 좋습니다.
 이전에 게시 된 작업 제출 (주 CVPR 2019 회의를 허용 하는 작업 포함) 수는 note 합니다. 
@@ -45,7 +45,13 @@ Microsoft HoloLens 같은 혼합된 현실 헤드셋은 컴퓨터 비전 응용 
 
 배포 하는 하위 집합 워크숍에서 구두 프레젠테이션을 위해 선택 됩니다. 그러나 좋습니다 모든 작성자를에 데모 세션에서 작업을 제공 합니다.
 
-_최상의 문서 특수-엄격 하 게 혼합 현실-상품을 사용 하 여 획득할 수 있습니다._
 
 ## <a name="schedule"></a>일정
-TBC 합니다.
+* 13:30-13:45: 시작 하 고 Opening 설명 합니다.
+* 13:45-14:15: **Talk 기조 강연**: Prof. Marc Pollefeys, ETH Zurich/Microsoft. 제목: TBD.
+* 14:15-14:45: **Talk 기조 강연**: Carnegie Mellon University Prof. Kris Kitani 합니다. 제목: TBD.
+* 14:45-15:15: **Talk 기조 강연**: Dr입니다. Yang Liu, California Institute of Technology. 제목: TBD.
+* 15:15-16:15: 휴식 시간 및 데모입니다.
+* 16:15-16:45: **Talk 기조 강연**: Prof. Kristen Grauman University 텍사스 오스틴/Facebook AI 연구 합니다. 제목: TBD.
+* 16:45-17:15: 구두 프레젠테이션 합니다.
+* 17:15-17:30: 최종 설명 합니다.
