commit translated contents

--- a/mixed-reality-docs/cvpr-2019.md
+++ b/mixed-reality-docs/cvpr-2019.md
@@ -6,12 +6,12 @@ ms.author: febogo
 ms.date: 1/9/2019
 ms.topic: article
 keywords: 이벤트, 연구 모드, cvpr, 컴퓨터 비전, 연구, HoloLens,
-ms.openlocfilehash: 1e53520979f5ca6692b9af69fb8c899cb34e9321
-ms.sourcegitcommit: a4a53e6772805d89a47588857e3e8fb1fd8d9710
+ms.openlocfilehash: ea38256dd5b6b7b36acf9e3d2a209cee8517aed5
+ms.sourcegitcommit: 45676da11ebe33a2aa3dccec0e8ad7d714420853
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/09/2019
-ms.locfileid: "65469084"
+ms.lasthandoff: 05/15/2019
+ms.locfileid: "65629128"
 ---
 # <a name="computer-vision-applications-for-mixed-reality-headsets"></a>혼합된 현실 헤드셋에 대 한 컴퓨터 비전 응용 프로그램
 장기 Beach (CA)-2019 년 6 월 17 년 (오후)
@@ -26,7 +26,7 @@ ms.locfileid: "65469084"
 
 ## <a name="overview"></a>개요
 
-![미리 보기 이미지](images/cvpr2019_teaser.jpg)
+![미리 보기 이미지](images/cvpr2019_teaser2.jpg)
 
 Microsoft HoloLens 같은 혼합된 현실 헤드셋은 컴퓨터 비전 응용 프로그램을 개발 하기 위해 강력한 플랫폼 되 고 있습니다. HoloLens 연구 모드에서는 모든 원시 이미지 센서 스트림에-깊이 등 IR.에 대 한 액세스를 제공 하 여 장치의 컴퓨터 비전 연구를 수 있습니다. 이제 2018 년 5 월 이후 연구 모드를 사용할 수, 데모 및 HoloLens 용으로 개발 중인 응용 프로그램에 대 한 몇 가지 흥미로운를 참조 하세요. 배포를 시작 했습니다. 
 
