commit translated contents

--- a/mixed-reality-docs/cvpr-2019.md
+++ b/mixed-reality-docs/cvpr-2019.md
@@ -6,17 +6,21 @@ ms.author: febogo
 ms.date: 1/9/2019
 ms.topic: article
 keywords: 이벤트, 연구 모드, cvpr, 컴퓨터 비전, 연구, HoloLens,
-ms.openlocfilehash: ea38256dd5b6b7b36acf9e3d2a209cee8517aed5
-ms.sourcegitcommit: 45676da11ebe33a2aa3dccec0e8ad7d714420853
+ms.openlocfilehash: df3d9f3efbba9657b5710b235f771a923e8ca6e5
+ms.sourcegitcommit: 150d258a23130026c8792da383a3993657841fb4
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/15/2019
-ms.locfileid: "65629128"
+ms.lasthandoff: 06/12/2019
+ms.locfileid: "67024545"
 ---
 # <a name="computer-vision-applications-for-mixed-reality-headsets"></a>혼합된 현실 헤드셋에 대 한 컴퓨터 비전 응용 프로그램
-장기 Beach (CA)-2019 년 6 월 17 년 (오후)
 
 와 함께에서 구성 [CVPR 2019](http://cvpr2019.thecvf.com/)
+
+장기 Beach (CA)
+
+6 월 17 일 2019 오후)-Hyatt Regency F
+
 
 ## <a name="organizers"></a>구성 도우미
 * Marc Pollefeys
@@ -48,9 +52,9 @@ Microsoft HoloLens 같은 혼합된 현실 헤드셋은 컴퓨터 비전 응용 
 
 ## <a name="schedule"></a>일정
 * 13:30-13:45: 시작 하 고 Opening 설명 합니다.
-* 13:45-14:15: **Talk 기조 강연**: Prof. Marc Pollefeys, ETH Zurich/Microsoft. 제목: TBD.
-* 14:15-14:45: **Talk 기조 강연**: Carnegie Mellon University Prof. Kris Kitani 합니다. 제목: TBD.
-* 14:45-15:15: **Talk 기조 강연**: Dr입니다. Yang Liu, California Institute of Technology. 제목: TBD.
+* 13:45-14:15: **Talk 기조 강연**: Prof. Marc Pollefeys, ETH Zurich/Microsoft. 제목: HoloLens에 egocentric Computer Vision 합니다.
+* 14:15-14:45: **Talk 기조 강연**: Carnegie Mellon University Prof. Kris Kitani 합니다. 제목: Egocentric 활동 및 자세를 예측 합니다.
+* 14:45-15:15: **Talk 기조 강연**: Dr입니다. Yang Liu, California Institute of Technology. 제목: 증강된 현실을 사용 하 여 for the Blind Cognitive 도우미를 강화 합니다.
 * 15:15-16:15: 휴식 시간 및 데모입니다.
 * 16:15-16:45: **Talk 기조 강연**: Prof. Kristen Grauman University 텍사스 오스틴/Facebook AI 연구 합니다. 제목: TBD.
 * 16:45-17:15: 구두 프레젠테이션 합니다.
