--- a/mixed-reality-docs/cvpr-2019.md
+++ b/mixed-reality-docs/cvpr-2019.md
@@ -6,52 +6,56 @@ ms.author: febogo
 ms.date: 1/9/2019
 ms.topic: article
 keywords: 이벤트, 연구 모드, cvpr, 컴퓨터 비전, 연구, HoloLens,
-ms.openlocfilehash: ea38256dd5b6b7b36acf9e3d2a209cee8517aed5
-ms.sourcegitcommit: 45676da11ebe33a2aa3dccec0e8ad7d714420853
+ms.openlocfilehash: df3d9f3efbba9657b5710b235f771a923e8ca6e5
+ms.sourcegitcommit: 150d258a23130026c8792da383a3993657841fb4
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/15/2019
-ms.locfileid: "65629128"
+ms.lasthandoff: 06/12/2019
+ms.locfileid: "67024545"
 ---
-# <a name="computer-vision-applications-for-mixed-reality-headsets"></a><span data-ttu-id="734ee-104">혼합된 현실 헤드셋에 대 한 컴퓨터 비전 응용 프로그램</span><span class="sxs-lookup"><span data-stu-id="734ee-104">Computer Vision Applications for Mixed Reality Headsets</span></span>
-<span data-ttu-id="734ee-105">장기 Beach (CA)-2019 년 6 월 17 년 (오후)</span><span class="sxs-lookup"><span data-stu-id="734ee-105">Long Beach (CA) - June 17, 2019 (Afternoon)</span></span>
+# <a name="computer-vision-applications-for-mixed-reality-headsets"></a><span data-ttu-id="040d4-104">혼합된 현실 헤드셋에 대 한 컴퓨터 비전 응용 프로그램</span><span class="sxs-lookup"><span data-stu-id="040d4-104">Computer Vision Applications for Mixed Reality Headsets</span></span>
 
-<span data-ttu-id="734ee-106">와 함께에서 구성 [CVPR 2019](http://cvpr2019.thecvf.com/)</span><span class="sxs-lookup"><span data-stu-id="734ee-106">Organized in conjunction with [CVPR 2019](http://cvpr2019.thecvf.com/)</span></span>
+<span data-ttu-id="040d4-105">와 함께에서 구성 [CVPR 2019](http://cvpr2019.thecvf.com/)</span><span class="sxs-lookup"><span data-stu-id="040d4-105">Organized in conjunction with [CVPR 2019](http://cvpr2019.thecvf.com/)</span></span>
 
-## <a name="organizers"></a><span data-ttu-id="734ee-107">구성 도우미</span><span class="sxs-lookup"><span data-stu-id="734ee-107">Organizers</span></span>
-* <span data-ttu-id="734ee-108">Marc Pollefeys</span><span class="sxs-lookup"><span data-stu-id="734ee-108">Marc Pollefeys</span></span>
-* <span data-ttu-id="734ee-109">Federica Bogo</span><span class="sxs-lookup"><span data-stu-id="734ee-109">Federica Bogo</span></span>
-* <span data-ttu-id="734ee-110">Johannes Schönberger</span><span class="sxs-lookup"><span data-stu-id="734ee-110">Johannes Schönberger</span></span>
-* <span data-ttu-id="734ee-111">Osman Ulusoy</span><span class="sxs-lookup"><span data-stu-id="734ee-111">Osman Ulusoy</span></span>
+<span data-ttu-id="040d4-106">장기 Beach (CA)</span><span class="sxs-lookup"><span data-stu-id="040d4-106">Long Beach (CA)</span></span>
 
-## <a name="overview"></a><span data-ttu-id="734ee-112">개요</span><span class="sxs-lookup"><span data-stu-id="734ee-112">Overview</span></span>
+<span data-ttu-id="040d4-107">6 월 17 일 2019 오후)-Hyatt Regency F</span><span class="sxs-lookup"><span data-stu-id="040d4-107">June 17, 2019 (Afternoon) - Hyatt Regency F</span></span>
+
+
+## <a name="organizers"></a><span data-ttu-id="040d4-108">구성 도우미</span><span class="sxs-lookup"><span data-stu-id="040d4-108">Organizers</span></span>
+* <span data-ttu-id="040d4-109">Marc Pollefeys</span><span class="sxs-lookup"><span data-stu-id="040d4-109">Marc Pollefeys</span></span>
+* <span data-ttu-id="040d4-110">Federica Bogo</span><span class="sxs-lookup"><span data-stu-id="040d4-110">Federica Bogo</span></span>
+* <span data-ttu-id="040d4-111">Johannes Schönberger</span><span class="sxs-lookup"><span data-stu-id="040d4-111">Johannes Schönberger</span></span>
+* <span data-ttu-id="040d4-112">Osman Ulusoy</span><span class="sxs-lookup"><span data-stu-id="040d4-112">Osman Ulusoy</span></span>
+
+## <a name="overview"></a><span data-ttu-id="040d4-113">개요</span><span class="sxs-lookup"><span data-stu-id="040d4-113">Overview</span></span>
 
 ![미리 보기 이미지](images/cvpr2019_teaser2.jpg)
 
-<span data-ttu-id="734ee-114">Microsoft HoloLens 같은 혼합된 현실 헤드셋은 컴퓨터 비전 응용 프로그램을 개발 하기 위해 강력한 플랫폼 되 고 있습니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-114">Mixed reality headsets such as the Microsoft HoloLens are becoming powerful platforms to develop computer vision applications.</span></span> <span data-ttu-id="734ee-115">HoloLens 연구 모드에서는 모든 원시 이미지 센서 스트림에-깊이 등 IR.에 대 한 액세스를 제공 하 여 장치의 컴퓨터 비전 연구를 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-115">HoloLens Research Mode enables computer vision research on device by providing access to all raw image sensor streams -- including depth and IR.</span></span> <span data-ttu-id="734ee-116">이제 2018 년 5 월 이후 연구 모드를 사용할 수, 데모 및 HoloLens 용으로 개발 중인 응용 프로그램에 대 한 몇 가지 흥미로운를 참조 하세요. 배포를 시작 했습니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-116">As Research Mode is now available since May 2018, we are starting to see several interesting demos and applications being developed for HoloLens.</span></span> 
+<span data-ttu-id="040d4-115">Microsoft HoloLens 같은 혼합된 현실 헤드셋은 컴퓨터 비전 응용 프로그램을 개발 하기 위해 강력한 플랫폼 되 고 있습니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-115">Mixed reality headsets such as the Microsoft HoloLens are becoming powerful platforms to develop computer vision applications.</span></span> <span data-ttu-id="040d4-116">HoloLens 연구 모드에서는 모든 원시 이미지 센서 스트림에-깊이 등 IR.에 대 한 액세스를 제공 하 여 장치의 컴퓨터 비전 연구를 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-116">HoloLens Research Mode enables computer vision research on device by providing access to all raw image sensor streams -- including depth and IR.</span></span> <span data-ttu-id="040d4-117">이제 2018 년 5 월 이후 연구 모드를 사용할 수, 데모 및 HoloLens 용으로 개발 중인 응용 프로그램에 대 한 몇 가지 흥미로운를 참조 하세요. 배포를 시작 했습니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-117">As Research Mode is now available since May 2018, we are starting to see several interesting demos and applications being developed for HoloLens.</span></span> 
 
-<span data-ttu-id="734ee-117">결합 하도록 학생 및 연구원 컴퓨터 비전 관심이 혼합된 현실 응용 프로그램에 대 한이 워크숍의 목표가입니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-117">The goal of this workshop is to bring together students and researchers interested in computer vision for mixed reality applications.</span></span> <span data-ttu-id="734ee-118">워크샵 데모 및 응용 프로그램을 공유 하 여 빌드를 서로 알아봅니다 장소를 제공 합니다 또는 응용 프로그램 이식 혼합 현실입니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-118">The workshop will provide a venue to share demos and applications, and learn from each other to build or port applications to mixed reality.</span></span> 
+<span data-ttu-id="040d4-118">결합 하도록 학생 및 연구원 컴퓨터 비전 관심이 혼합된 현실 응용 프로그램에 대 한이 워크숍의 목표가입니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-118">The goal of this workshop is to bring together students and researchers interested in computer vision for mixed reality applications.</span></span> <span data-ttu-id="040d4-119">워크샵 데모 및 응용 프로그램을 공유 하 여 빌드를 서로 알아봅니다 장소를 제공 합니다 또는 응용 프로그램 이식 혼합 현실입니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-119">The workshop will provide a venue to share demos and applications, and learn from each other to build or port applications to mixed reality.</span></span> 
 
-<span data-ttu-id="734ee-119">(Ego 중심) 개체 인식, 직접 및 사용자 추적, 활동 인식을, SLAM, 3D 재구성, 장면 이해, 센서 기반 지역화, 탐색 등의 항목에서 전송을 사용 하는 것이 좋습니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-119">We encourage submissions on the topics of (ego-centric) object recognition, hand and user tracking, activity recognition, SLAM, 3D reconstruction, scene understanding, sensor-based localization, navigation and more.</span></span>
+<span data-ttu-id="040d4-120">(Ego 중심) 개체 인식, 직접 및 사용자 추적, 활동 인식을, SLAM, 3D 재구성, 장면 이해, 센서 기반 지역화, 탐색 등의 항목에서 전송을 사용 하는 것이 좋습니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-120">We encourage submissions on the topics of (ego-centric) object recognition, hand and user tracking, activity recognition, SLAM, 3D reconstruction, scene understanding, sensor-based localization, navigation and more.</span></span>
 
-## <a name="paper-submission"></a><span data-ttu-id="734ee-120">문서 제출</span><span class="sxs-lookup"><span data-stu-id="734ee-120">Paper Submission</span></span>
-* <span data-ttu-id="734ee-121">문서 제출 마감 날짜: 월 17 일</span><span class="sxs-lookup"><span data-stu-id="734ee-121">Paper submission deadline: May 17</span></span>
-* <span data-ttu-id="734ee-122">작성자가 알림: 5 월 24</span><span class="sxs-lookup"><span data-stu-id="734ee-122">Notification to authors: May 24</span></span>
+## <a name="paper-submission"></a><span data-ttu-id="040d4-121">문서 제출</span><span class="sxs-lookup"><span data-stu-id="040d4-121">Paper Submission</span></span>
+* <span data-ttu-id="040d4-122">문서 제출 마감 날짜: 월 17 일</span><span class="sxs-lookup"><span data-stu-id="040d4-122">Paper submission deadline: May 17</span></span>
+* <span data-ttu-id="040d4-123">작성자가 알림: 5 월 24</span><span class="sxs-lookup"><span data-stu-id="040d4-123">Notification to authors: May 24</span></span>
 
-<span data-ttu-id="734ee-123">문서 제출 CVPR 템플릿이 사용할지 및 4 페이지 및 참조로 제한 됩니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-123">Paper submissions should use the CVPR template and are limited to 4 pages plus references.</span></span> <span data-ttu-id="734ee-124">또한 작성자를 응용 프로그램을 보여 주는 비디오를 제출 하려면을 사용 하는 것이 좋습니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-124">In addition, we encourage the authors to submit a video showcasing their application.</span></span>
-<span data-ttu-id="734ee-125">이전에 게시 된 작업 제출 (주 CVPR 2019 회의를 허용 하는 작업 포함) 수는 note 합니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-125">Note that submissions of previously published work are allowed (including work accepted to the main CVPR 2019 conference).</span></span> 
+<span data-ttu-id="040d4-124">문서 제출 CVPR 템플릿이 사용할지 및 4 페이지 및 참조로 제한 됩니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-124">Paper submissions should use the CVPR template and are limited to 4 pages plus references.</span></span> <span data-ttu-id="040d4-125">또한 작성자를 응용 프로그램을 보여 주는 비디오를 제출 하려면을 사용 하는 것이 좋습니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-125">In addition, we encourage the authors to submit a video showcasing their application.</span></span>
+<span data-ttu-id="040d4-126">이전에 게시 된 작업 제출 (주 CVPR 2019 회의를 허용 하는 작업 포함) 수는 note 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-126">Note that submissions of previously published work are allowed (including work accepted to the main CVPR 2019 conference).</span></span> 
 
-<span data-ttu-id="734ee-126">제출 된 CMT에 업로드할 수 있습니다. https://cmt3.research.microsoft.com/CVFORMR2019</span><span class="sxs-lookup"><span data-stu-id="734ee-126">Submissions can be uploaded to the CMT: https://cmt3.research.microsoft.com/CVFORMR2019</span></span>
+<span data-ttu-id="040d4-127">제출 된 CMT에 업로드할 수 있습니다. https://cmt3.research.microsoft.com/CVFORMR2019</span><span class="sxs-lookup"><span data-stu-id="040d4-127">Submissions can be uploaded to the CMT: https://cmt3.research.microsoft.com/CVFORMR2019</span></span>
 
-<span data-ttu-id="734ee-127">배포 하는 하위 집합 워크숍에서 구두 프레젠테이션을 위해 선택 됩니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-127">A subset of papers will be selected for oral presentation at the workshop.</span></span> <span data-ttu-id="734ee-128">그러나 좋습니다 모든 작성자를에 데모 세션에서 작업을 제공 합니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-128">However, we strongly encourage all the authors to present their work during the demo session.</span></span>
+<span data-ttu-id="040d4-128">배포 하는 하위 집합 워크숍에서 구두 프레젠테이션을 위해 선택 됩니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-128">A subset of papers will be selected for oral presentation at the workshop.</span></span> <span data-ttu-id="040d4-129">그러나 좋습니다 모든 작성자를에 데모 세션에서 작업을 제공 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-129">However, we strongly encourage all the authors to present their work during the demo session.</span></span>
 
 
-## <a name="schedule"></a><span data-ttu-id="734ee-129">일정</span><span class="sxs-lookup"><span data-stu-id="734ee-129">Schedule</span></span>
-* <span data-ttu-id="734ee-130">13:30-13:45: 시작 하 고 Opening 설명 합니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-130">13:30-13:45: Welcome and Opening Remarks.</span></span>
-* <span data-ttu-id="734ee-131">13:45-14:15: **Talk 기조 강연**: Prof. Marc Pollefeys, ETH Zurich/Microsoft.</span><span class="sxs-lookup"><span data-stu-id="734ee-131">13:45-14:15: **Keynote talk**: Prof. Marc Pollefeys, ETH Zurich/Microsoft.</span></span> <span data-ttu-id="734ee-132">제목: TBD.</span><span class="sxs-lookup"><span data-stu-id="734ee-132">Title: TBD.</span></span>
-* <span data-ttu-id="734ee-133">14:15-14:45: **Talk 기조 강연**: Carnegie Mellon University Prof. Kris Kitani 합니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-133">14:15-14:45: **Keynote talk**: Prof. Kris Kitani, Carnegie Mellon University.</span></span> <span data-ttu-id="734ee-134">제목: TBD.</span><span class="sxs-lookup"><span data-stu-id="734ee-134">Title: TBD.</span></span>
-* <span data-ttu-id="734ee-135">14:45-15:15: **Talk 기조 강연**: Dr입니다. Yang Liu, California Institute of Technology.</span><span class="sxs-lookup"><span data-stu-id="734ee-135">14:45-15:15: **Keynote talk**: Dr. Yang Liu, California Institute of Technology.</span></span> <span data-ttu-id="734ee-136">제목: TBD.</span><span class="sxs-lookup"><span data-stu-id="734ee-136">Title: TBD.</span></span>
-* <span data-ttu-id="734ee-137">15:15-16:15: 휴식 시간 및 데모입니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-137">15:15-16:15: Coffee break and demos.</span></span>
-* <span data-ttu-id="734ee-138">16:15-16:45: **Talk 기조 강연**: Prof. Kristen Grauman University 텍사스 오스틴/Facebook AI 연구 합니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-138">16:15-16:45: **Keynote talk**: Prof. Kristen Grauman, University of Texas at Austin/Facebook AI Research.</span></span> <span data-ttu-id="734ee-139">제목: TBD.</span><span class="sxs-lookup"><span data-stu-id="734ee-139">Title: TBD.</span></span>
-* <span data-ttu-id="734ee-140">16:45-17:15: 구두 프레젠테이션 합니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-140">16:45-17:15: Oral presentations.</span></span>
-* <span data-ttu-id="734ee-141">17:15-17:30: 최종 설명 합니다.</span><span class="sxs-lookup"><span data-stu-id="734ee-141">17:15-17:30: Final Remarks.</span></span>
+## <a name="schedule"></a><span data-ttu-id="040d4-130">일정</span><span class="sxs-lookup"><span data-stu-id="040d4-130">Schedule</span></span>
+* <span data-ttu-id="040d4-131">13:30-13:45: 시작 하 고 Opening 설명 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-131">13:30-13:45: Welcome and Opening Remarks.</span></span>
+* <span data-ttu-id="040d4-132">13:45-14:15: **Talk 기조 강연**: Prof. Marc Pollefeys, ETH Zurich/Microsoft.</span><span class="sxs-lookup"><span data-stu-id="040d4-132">13:45-14:15: **Keynote talk**: Prof. Marc Pollefeys, ETH Zurich/Microsoft.</span></span> <span data-ttu-id="040d4-133">제목: HoloLens에 egocentric Computer Vision 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-133">Title: Egocentric Computer Vision on HoloLens.</span></span>
+* <span data-ttu-id="040d4-134">14:15-14:45: **Talk 기조 강연**: Carnegie Mellon University Prof. Kris Kitani 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-134">14:15-14:45: **Keynote talk**: Prof. Kris Kitani, Carnegie Mellon University.</span></span> <span data-ttu-id="040d4-135">제목: Egocentric 활동 및 자세를 예측 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-135">Title: Egocentric Activity and Pose Forecasting.</span></span>
+* <span data-ttu-id="040d4-136">14:45-15:15: **Talk 기조 강연**: Dr입니다. Yang Liu, California Institute of Technology.</span><span class="sxs-lookup"><span data-stu-id="040d4-136">14:45-15:15: **Keynote talk**: Dr. Yang Liu, California Institute of Technology.</span></span> <span data-ttu-id="040d4-137">제목: 증강된 현실을 사용 하 여 for the Blind Cognitive 도우미를 강화 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-137">Title: Powering a Cognitive Assistant for the Blind with Augmented Reality.</span></span>
+* <span data-ttu-id="040d4-138">15:15-16:15: 휴식 시간 및 데모입니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-138">15:15-16:15: Coffee break and demos.</span></span>
+* <span data-ttu-id="040d4-139">16:15-16:45: **Talk 기조 강연**: Prof. Kristen Grauman University 텍사스 오스틴/Facebook AI 연구 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-139">16:15-16:45: **Keynote talk**: Prof. Kristen Grauman, University of Texas at Austin/Facebook AI Research.</span></span> <span data-ttu-id="040d4-140">제목: TBD.</span><span class="sxs-lookup"><span data-stu-id="040d4-140">Title: TBD.</span></span>
+* <span data-ttu-id="040d4-141">16:45-17:15: 구두 프레젠테이션 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-141">16:45-17:15: Oral presentations.</span></span>
+* <span data-ttu-id="040d4-142">17:15-17:30: 최종 설명 합니다.</span><span class="sxs-lookup"><span data-stu-id="040d4-142">17:15-17:30: Final Remarks.</span></span>
