--- a/mixed-reality-docs/cvpr-2019.md
+++ b/mixed-reality-docs/cvpr-2019.md
@@ -6,12 +6,12 @@ ms.author: febogo
 ms.date: 1/9/2019
 ms.topic: article
 keywords: 이벤트, 연구 모드, cvpr, 컴퓨터 비전, 연구, HoloLens,
-ms.openlocfilehash: df3d9f3efbba9657b5710b235f771a923e8ca6e5
-ms.sourcegitcommit: 150d258a23130026c8792da383a3993657841fb4
+ms.openlocfilehash: 89d79bcef77043564e51faada940d2c71a6005e4
+ms.sourcegitcommit: 2f600e5ad00cd447b180b0f89192b4b9d86bbc7e
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 06/12/2019
-ms.locfileid: "67024545"
+ms.lasthandoff: 06/15/2019
+ms.locfileid: "67148706"
 ---
 # <a name="computer-vision-applications-for-mixed-reality-headsets"></a>혼합된 현실 헤드셋에 대 한 컴퓨터 비전 응용 프로그램
 
@@ -56,6 +56,8 @@ Microsoft HoloLens 같은 혼합된 현실 헤드셋은 컴퓨터 비전 응용 
 * 14:15-14:45: **Talk 기조 강연**: Carnegie Mellon University Prof. Kris Kitani 합니다. 제목: Egocentric 활동 및 자세를 예측 합니다.
 * 14:45-15:15: **Talk 기조 강연**: Dr입니다. Yang Liu, California Institute of Technology. 제목: 증강된 현실을 사용 하 여 for the Blind Cognitive 도우미를 강화 합니다.
 * 15:15-16:15: 휴식 시간 및 데모입니다.
-* 16:15-16:45: **Talk 기조 강연**: Prof. Kristen Grauman University 텍사스 오스틴/Facebook AI 연구 합니다. 제목: TBD.
-* 16:45-17:15: 구두 프레젠테이션 합니다.
+* 16:15-16:45: **Talk 기조 강연**: Prof. Kristen Grauman University 텍사스 오스틴/Facebook AI 연구 합니다. 제목: 1 인칭 비디오에서 사람이 개체 상호 작용 합니다.
+* 16:45-17:15: 구두 프레젠테이션:
+    * 등록-간편한 HoloLens 사용 하 여 독립 실행형 orthopedic 탐색 합니다. 6\. Liebmann, S. Roner, M. von Atzigen, F. Wanivenhaus, C. Neuhaus, J. Spirig, D. Scaramuzza, R. Sutter, J. Snedeker, M. Farshad, P. Furnstahl.
+    * 스테레오는 HoloLens를 사용 하 여를 따라 이동 하 여 학습 합니다. 8\. Zhan, Y. Pekelny O. Ulusoy 합니다.
 * 17:15-17:30: 최종 설명 합니다.
